Fix Travis: workarounds for spec timeouts
I believe that by.mode(‘message’) is failed so I’m switching to by.css/$

--- a/tests/protractor/chat/chat.html
+++ b/tests/protractor/chat/chat.html
@@ -34,7 +34,7 @@
 
     <!-- Add message form -->
     <form ng-submit="addMessage()">
-      <input id="message" type="text" ng-model="message" placeholder="Message..." autofocus>
+      <input id="newMessageInput" type="text" ng-model="message" placeholder="Message..." autofocus>
       <input id="submit" type="submit" value="Submit">
     </form>
 
