--- a/tests/protractor/todo/todo.html
+++ b/tests/protractor/todo/todo.html
@@ -30,7 +30,7 @@
 
     <!-- Add todo input -->
     <form ng-submit="addTodo()">
-      <input placeholder="What needs to be done?" ng-model="newTodo" autofocus>
+      <input id="newTodoInput" placeholder="What needs to be done?" ng-model="newTodo" autofocus>
     </form>
 
     <!-- Todo list -->
